--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -49,6 +49,7 @@ body {
     border: 3px solid #BBBBBB;
     border-radius: 10px;
     appearance: none;
+    text-align: center;
 }
 
 .entrada {
@@ -57,9 +58,13 @@ body {
     border-radius: 10px;
     border: 3px solid #BBBBBB ;
     display: block;
+    text-align: center;
+    font-weight: 700;
+    
 
 
 }
+
 
 .button_convert_money{
     height: 48px;
@@ -67,6 +72,10 @@ body {
     width: 100%;
     border: none;
     margin-top: 24px;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 8px;
 
 }
+
 
