--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,100 @@
 :root{
     --cor-roxa: #772FD3;
     --cor-cinza: #BBBBBB;
+    --cor-cinza-escuro: #777777;
+    --cor-preto-claro: #555555;
+    --cor-banco: #FFFFFF;
+
 
     --fonte-principal: font-family: 'Roboto', sans-serif;
 
 }
 
 
+.img_logo{
+    display: none;
+}
+
+main{
+    width: 375px;
+    background: #f4f4f4;
+    border-radius: 20px;
+    padding: 44px 24px 23px;
+}
+
+label {
+    color: var(--cor-cinza-escuro);
+    font-size: 14px;
+    font-weight: 400;
+
+
+}
+
+select, input{
+    height: 48px;
+    width: 100%;
+    border: 1px solid var(--cor-cinza);
+    border-radius: 8px;
+    margin-bottom: 24px;
+    appearance: none;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    color:  var(--cor-preto-claro);
+    
+ 
+}
+
+
+
+button{
+    height: 48px;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    background: var(--cor-roxa);
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--cor-banco);
+}
+
+button:hover{
+      opacity: 0.8;
+
+}
+
+section{
+    border: 1px solid var(--cor-roxa);
+    border-radius: 20px;
+    margin-top: 36px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+
+
+.arrow{
+    margin: 15px 0;
+}
+
+.currency_box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+}
+
+
+.currency{
+    font-size: 14px;
+    color: var(--cor-cinza-escuro);
+}
+
+.currency_value{
+    font-size: 20px;
+    font-weight: 700;
+    color:var(--cor-preto-claro)
+}
